# homeassistantreader

./: .dockerignore  .env  .env.example  Dockerfile  README.md  main.py  pyproject.toml
script/: init.sql
src/config/: log_config.py
src/dao/: homeassistant_pgsql_dao.py
src/service/: homeassistant_reader_service.py
