[project]
name = "homeassistantreader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "psycopg2-binary>=2.9.12",
    "requests>=2.34.2",
]
[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
